--- a/landing-dev/style.css
+++ b/landing-dev/style.css
@@ -10,3 +10,12 @@
 .rud-img-height-fluid {
     max-height: 100%;
 }
+.rud-margin-auto {
+    margin-right: auto;
+    margin-left: 50%;
+}
+.rud-spacer-sm {
+    width: 100%;
+    height: 20px;
+}
+/*ADD MORE SPACERS HERE NOW OK COOL FUTURE ME*/
