--- a/landing-dev/style.css
+++ b/landing-dev/style.css
@@ -1,8 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 .rud-img-width-fluid {
     width: 100%;
-}
-.rud-nav-item-color{
-    color: white;
 }
 .rud-width-fluid {
     width: 100%
@@ -12,6 +10,11 @@
 }
 .rud-img-height-fluid {
     max-height: 100%;
+}
+@media (max-width: 526px) {
+    .rud-img-height-fluid {
+        max-width: 100%;
+    }
 }
 .rud-margin-auto {
     margin-right: auto;
@@ -23,16 +26,35 @@
 }
 .rud-spacer-md {
     width: 100%;
-    height: 20px;
+    height: 40px;
 }
 .rud-spacer-lg {
     width: 100%;
-    height: 20px;
+    height: 50px;
 }
 .rud-spacer-xl {
     width: 100%;
-    height: 20px;
+    height: 100px;
 }
 .rud-card-sub-height {
     min-height: 200px;
+}
+.rud-vert-middle {
+    display: inline-flex;
+    flex-direction: vertical;
+    height: 100%;
+}
+.rud-vert-middle-child {
+    height: fit-content;
+    display: flex;
+    flex: 1;
+}
+.rud-text-logo {
+    font-family: 'Source Code Pro', monospace;
+}
+.rud-nav-item-color {
+    color: white;
+}
+.rud-no-outline {
+    outline: none;
 }
