theory modal finished and reports finished

--- a/ttm-dev/style.css
+++ b/ttm-dev/style.css
@@ -4,9 +4,18 @@
 .spacer-md {
   height: 20px;
 }
+.spacer-lg {
+  height: 30px;
+}
 .raxus {
   /*thing*/
 }
 .cursor-link {
   cursor: pointer;
+}
+.lh-0 {
+  line-height: 0px;
+}
+.minh {
+  min-height: 100vh;
 }
