--- a/ttm/style.css
+++ b/ttm/style.css
@@ -51,6 +51,9 @@
 .content-wrapper {
   scroll-behavior: smooth;
 }
+.mr-1 {
+  margin-right: 1px;
+}
 /*
 --dark-color: coral;
 --dark-color-light: black;
