--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -75,6 +75,21 @@
   z-index: 20;
 }
 
+.spacer-md-lg {
+  width: 100%;
+  height: 20px;
+}
+
+@media (min-width: 992px) {
+  .spacer-md-lg {
+    height: 0px;
+  }
+  
+  .ch-100 {
+    height: 100%;
+  }
+}
+
 @media(min-width: 992px) {
   .shadow-lg-4 {
     box-shadow:0 2px 4px 0 rgba(0,0,0,.14),0 4px 5px 0 rgba(0,0,0,.12),0 1px 10px 0 rgba(0,0,0,.2) !important;
