--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 @font-face {
     font-family: "Parkway Lush";
     src: url("./splash.woff2") format("woff2");
@@ -9,6 +11,14 @@
 
 .font-size-splash {
     font-size: 96px;
+}
+
+h1, h2, h3, h4, h5, h6, .font-header {
+    font-family: "Poppins", sans-serif;
+}
+
+h2 {
+    font-size: 48px;
 }
 
 @media screen and (min-width: 420px) {
