--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -10,10 +10,23 @@
 .content-frosted {
 }
 
-.h-test {
-    height: 2000px;
-}
-
 .flex-1 {
     flex: 1;
+}
+
+.h-50vh {
+    height: 50vh;
+}
+
+.h-80vh {
+    height: 80vh;
+}
+
+.text-gray {
+    color: #888888;
+}
+
+.w-100 {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
