--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -46,3 +46,30 @@
 .mt-100vh {
     margin-top: 100vh;
 }
+
+.h-15 {
+    height: 15%
+}
+
+.border-bottom-box {
+    border-bottom: 1px solid hsla(0,0%,100%,0.1);
+}
+
+.fake-content {
+    margin: 2% 2% 0 2%;
+    border-radius: 10px;
+    font-size: 70%;
+    background-color: #999999;
+}
+
+.fake-content-last {
+    margin: 2% 2% 2% 2%;
+}
+
+.m-1p {
+    height: 1%;
+}
+
+.box-top {
+    line-height: 50px;
+}
