did a lot of things: - theming - utilities - full layout and boilerplate - turned it into a template - quite literally just need to add information

--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@600&display=swap');
-
-.font-overpass {
-    font-family: "Overpass", sans-serif;
-    font-size: 300px;
-    margin-bottom: 0;
-    line-height: 300px;
-}
-
-.flex-grow {
-    display: flex;
-    flex-grow: inherit;
-}
-
-.h-100vh {
-    height: 100vh;
-}
-
-.w-100vw {
-    width: 100vw;
-}
-
-.h-100px {
-    height: 100px;
-}
-
-.h-75px {
-    height: 75px;
-}
+@import "./styles/main.css";
