--- a/src/styles/main.styles.css
+++ b/src/styles/main.styles.css
@@ -5,9 +5,9 @@
     word-spacing: 0;
 }
 
-.bg-splash {
-    background-image: url("../assets/splash.svg");
-    background-repeat: no-repeat;
-    background-position-x: right;
-    background-position-y: 44px;
-}
+/*.bg-splash {*/
+/*    background-image: url("../assets/splash.svg");*/
+/*    background-repeat: no-repeat;*/
+/*    background-position-x: right;*/
+/*    background-position-y: 44px;*/
+/*}*/
