--- a/src/styles/main.utils.css
+++ b/src/styles/main.utils.css
@@ -14,6 +14,12 @@ h1, h2, h3, h4, h5, h6, .font-header, .font-hero, .font-nav, .font-btn {
     width: 90%;
 }
 
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    .w-md-80 {
+        width: 80% !important;
+    }
+}
+
 .cursor-auto {
     cursor: auto;
 }
@@ -262,8 +268,17 @@ h1, h2, h3, h4, h5, h6, .font-header, .font-hero, .font-nav, .font-btn {
     font-size: 88px;
 }
 
-.font-size-100 {
-    font-size: 100px;
+
+@media screen and (min-width: 576px) {
+    .font-size-100 {
+        font-size: 70px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .font-size-100 {
+        font-size: 100px;
+    }
 }
 
 .font-size-120 {
