--- a/plugins/bugs/style.css
+++ b/plugins/bugs/style.css
@@ -1,69 +1,110 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
-.rud-img-width-fluid {
-    width: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Poppins&display=swap');
+
+html {
+    background-color: #FFFFFF;
 }
-.rud-width-fluid {
-    width: 100%
+
+.container {
+    width: 90%;
+    margin: auto;
+    text-align: center;
 }
-.rud-height-fluid {
-    height: 100%;
+
+a {
+    text-decoration: none;
+    color: #00a3ff;
+    transition: background-color 0.25s ease-in-out;
 }
-.rud-img-height-fluid {
-    max-height: 100%;
+
+a:hover, a:focus, a:active {
+    background-color: #dcf1ff;
 }
-@media (max-width: 526px) {
-    .rud-img-height-fluid {
-        max-width: 100%;
-    }
+
+.text-title {
+    color: #00a3ff;
+    font-size: 106px;
+    font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    margin-bottom: 20px;
 }
-.rud-margin-auto {
-    margin-right: auto;
-    margin-left: 50%;
+
+.input {
+    color: #334A51;
+    font-size: 36px;
+    font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    border-top: 0 solid #FFFFFF;
+    border-right: 0 solid #FFFFFF;
+    border-bottom: 2px solid #00a3ff;
+    border-left: 0 solid #FFFFFF;
+    width: 95%;
+    text-align: center;
 }
-.rud-spacer-sm {
-    width: 100%;
-    height: 20px;
+
+.input::placeholder {
+    color: #747a7b;
 }
-.rud-spacer-md {
-    width: 100%;
-    height: 40px;
-}
-.rud-spacer-lg {
-    width: 100%;
-    height: 50px;
-}
-.rud-spacer-xl {
-    width: 100%;
-    height: 100px;
-}
-.rud-card-sub-height {
-    height: 270px;
-}
-.rud-vert-middle {
-    display: inline-flex;
-    flex-direction: vertical;
-    height: 100%;
-}
-.rud-vert-middle-child {
-    height: fit-content;
-    display: flex;
-    flex: 1;
-}
-.rud-text-logo {
-    font-family: 'Source Code Pro', monospace;
-}
-.rud-nav-item-color {
-    color: white;
-}
-.rud-no-outline {
+
+.input:focus-visible {
     outline: none;
 }
-.rud-archive-inline-flex {
-    display: inline-flex;
-    flex-direction: row;
+
+.text-body {
+    color: #334A51;
+    font-size: 16px;
+    font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    margin-bottom: 0;
 }
-@media (max-width: 576px) {
-    .rud-archive-inline-flex {
-        display: block;
+
+.text-link {
+    color: #334A51;
+    font-size: 32px;
+    font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    border-radius: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    text-decoration: none;
+    background-color: #aacee3;
+    transition: background-color 0.25s;
+}
+
+.hidden {
+    display: none;
+}
+
+.text-link:hover, .text-link:active, .text-link:focus {
+    background-color: #80c2e7;
+}
+
+@media screen and (min-width: 350px) {
+    .container {
+        text-align: left;
+    }
+
+    .input {
+        text-align: left;
+    }
+
+    .hidden {
+        display: inline;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    .container {
+        width: 80%;
+        text-align: left;
+    }
+
+    .text-title {
+        font-size: 164px;
+    }
+
+    .text-body {
+        font-size: 24px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .text-title {
+        font-size: 172px;
     }
 }
